Remove the hover effect in blog cards, fixed the inconsistent spacing between the child elements in the leftsidebar, fixed the ipad display layout , added blur effect in dropdown menu in blog section

--- a/src/layouts/Blog/RightSidebar/styles/RightSidebar.module.scss
+++ b/src/layouts/Blog/RightSidebar/styles/RightSidebar.module.scss
@@ -108,6 +108,33 @@
     }
   }
   
+@media (max-width: 1024px) {
+    margin-left: 0;
+    border-left: none;
+    height: auto;
+    max-height: 50vh;
+    width: 100%;
+    max-width: 100%;
+    
+    .blogItem {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    
+    .blogImage {
+      margin-right: 0;
+      margin-bottom: 0.5rem;
+      width: 100%;
+      max-width: 100px;
+      height: auto;
+    }
+    
+    .blogInfo {
+      width: 100%;
+      white-space: normal; 
+    }
+  }
+
   @media (max-width: 768px) {
     margin-left: 0;
     border-left: none;
